--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
   <div class="container">
 	<div class="header-left">
-		<img class="logo" src="file:///D:/html-leson/html-lesson/images/logo.svg">
+		<img class="logo" src="https://lh3.googleusercontent.com/proxy/SFFXeQXyhXGymBdVlh7e3I9rKa4FKlmSUskFVZS1WiGxgFTbyBINRP5rw8GaE7yzVC7jVwCUhUvUk0_k9DRjmgP_55MhLXV6e6uoABKGluZP8SbjHtSLUDOrkVrM">
 	</div>
     <span class="fa fa-bars menu-icon"></span>
 	<div class="header-right">
